fixed overflow bug

--- a/src/styles/components/pages/Home/index.module.scss
+++ b/src/styles/components/pages/Home/index.module.scss
@@ -1,6 +1,7 @@
 @use '@/styles/library' as *;
 
 .section {
+	max-width: 100vw;
 	margin-top: 2em;
 	padding: 4em 1.25em;
 	display: flex;
